@@ -1,5 +1,9 @@
 package xyz.erupt.ai.service;
 
+import dev.langchain4j.data.message.AiMessage;
+import dev.langchain4j.data.message.ChatMessage;
+import dev.langchain4j.data.message.SystemMessage;
+import dev.langchain4j.data.message.UserMessage;
 import jakarta.annotation.Resource;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
@@ -9,19 +13,17 @@ import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
-import xyz.erupt.ai.call.AiFunctionManager;
 import xyz.erupt.ai.config.AiProp;
 import xyz.erupt.ai.constants.ChatSenderType;
-import xyz.erupt.ai.constants.MessageRole;
 import xyz.erupt.ai.core.LlmCore;
 import xyz.erupt.ai.core.LlmRequest;
 import xyz.erupt.ai.handler.EruptPromptHandler;
-import xyz.erupt.ai.model.Chat;
-import xyz.erupt.ai.model.ChatMessage;
+import xyz.erupt.ai.model.AiChat;
+import xyz.erupt.ai.model.AiChatMessage;
 import xyz.erupt.ai.model.LLM;
 import xyz.erupt.ai.model.LLMAgent;
-import xyz.erupt.ai.pojo.ChatCompletionMessage;
 import xyz.erupt.ai.vo.SseBody;
+import xyz.erupt.ai.vo.SseEvent;
 import xyz.erupt.core.config.GsonFactory;
 import xyz.erupt.core.context.MetaContext;
 import xyz.erupt.core.exception.EruptWebApiRuntimeException;
@@ -46,124 +48,147 @@ public class LLMService {
     @Resource
     private EruptDao eruptDao;
 
-    @Resource
-    private AiFunctionManager aiFunctionManager;
-
-    private static final int MESSAGE_TS = 100;
-
     public String send(String prompt) {
-        return send(prompt, Collections.emptyList());
+        return this.send(List.of(UserMessage.from(prompt)));
     }
 
-    public String send(String prompt, List<ChatCompletionMessage> assistantPrompt) {
-        return send(eruptDao.lambdaQuery(LLM.class).eq(LLM::getDefaultLLM, true).eq(LLM::getEnable, true).limit(1).one(), prompt, assistantPrompt);
+    public String send(List<ChatMessage> chatMessages) {
+        return this.send(eruptDao.lambdaQuery(LLM.class).eq(LLM::getDefaultLLM, true).eq(LLM::getEnable, true).limit(1).one(), chatMessages);
     }
 
     public String send(LLM llm, String prompt) {
-        return send(llm, prompt, Collections.emptyList());
+        return send(llm, List.of(UserMessage.from(prompt)));
     }
 
-    public String send(LLM llmConfig, String prompt, List<ChatCompletionMessage> assistantPrompt) {
+    public String send(LLM llmConfig, List<ChatMessage> chatMessages) {
         if (null == llmConfig) {
             throw new EruptWebApiRuntimeException("Not found LLM config");
         }
-        return LlmCore.getLLM(llmConfig.getLlm()).chat(llmConfig.toLlmRequest(), prompt, assistantPrompt).getMessageStr();
+        return LlmCore.getLLM(llmConfig.getLlm()).chat(llmConfig.toLlmRequest(), chatMessages);
     }
 
     @SneakyThrows
-    public List<ChatCompletionMessage> geneCompletionPrompt(Chat chat, LLMAgent llmAgent, Integer contextTurn) {
-        List<ChatCompletionMessage> chatCompletionMessages = new ArrayList<>();
-        chatCompletionMessages.add(new ChatCompletionMessage(MessageRole.system, aiProp.getSystemPrompt()));
+    public List<ChatMessage> geneCompletionPrompt(AiChat chat, LLMAgent llmAgent, Integer contextTurn) {
+        List<ChatMessage> messages = new ArrayList<>();
+        List<AiChatMessage> chatMessages = eruptDao.lambdaQuery(AiChatMessage.class)
+                .eq(AiChatMessage::getChatId, chat.getId())
+                .isNotNull(AiChatMessage::getContent)
+                .orderByDesc(AiChatMessage::getCreatedAt)
+                .limit(contextTurn + 1).offset(1).list();
+        Collections.reverse(chatMessages);
+        for (AiChatMessage message : chatMessages) {
+            if (message.getSenderType() == ChatSenderType.USER) {
+                messages.add(UserMessage.from(message.getContent()));
+            } else if (message.getSenderType() == ChatSenderType.MODEL) {
+                messages.add(AiMessage.from(message.getContent()));
+            }
+        }
         if (null != llmAgent) {
             // Agent
             if (null == llmAgent.getPromptHandler()) {
-                chatCompletionMessages.add(new ChatCompletionMessage(MessageRole.system, llmAgent.getPrompt()));
+                messages.add(SystemMessage.from(llmAgent.getPrompt()));
             } else {
-                chatCompletionMessages.add(new ChatCompletionMessage(MessageRole.system,
-                        EruptSpringUtil.getBeanByPath(llmAgent.getPromptHandler(), EruptPromptHandler.class).handle(llmAgent.getPrompt())));
-            }
-        } else {
-            // Function Call
-            if (aiProp.isEnableFunctionCall()) {
-                chatCompletionMessages.add(new ChatCompletionMessage(MessageRole.system, aiFunctionManager.getFunctionCallPrompt()));
+                messages.add(SystemMessage.from(EruptSpringUtil.getBeanByPath(llmAgent.getPromptHandler(), EruptPromptHandler.class).handle(llmAgent.getPrompt())));
             }
         }
-        List<ChatMessage> chatMessages = eruptDao.lambdaQuery(ChatMessage.class)
-                .eq(ChatMessage::getChatId, chat.getId())
-                .isNotNull(ChatMessage::getContent)
-                .orderByDesc(ChatMessage::getCreatedAt)
-                .limit(contextTurn + 1).list();
-        Collections.reverse(chatMessages);
-        chatMessages.forEach(it -> chatCompletionMessages.add(
-                new ChatCompletionMessage(it.getSenderType() == ChatSenderType.USER ? MessageRole.user : MessageRole.assistant, it.getContent()))
-        );
-        return chatCompletionMessages;
+        return messages;
     }
 
     @Async
     @Transactional
     @SneakyThrows
-    public void sendSse(MetaContext metaContext, LLMAgent llmAgent, SseEmitter emitter, LlmCore llm, LLM llmModal, ChatMessage chatMessage, List<ChatCompletionMessage> completionMessage) {
+    public void sendSse(MetaContext metaContext, Boolean autoToolCall, LLMAgent llmAgent, SseEmitter emitter,
+                        LlmCore llm, LLM llmModel, AiChatMessage chatMessage,
+                        String userMessage,List<ChatMessage> chatContext) {
         try {
             MetaContext.set(metaContext);
-            LlmRequest llmRequest = llmModal.toLlmRequest();
+            LlmRequest llmRequest = llmModel.toLlmRequest();
             if (null != llmAgent) {
-                llmAgent.mergeToLLmRequest(llmModal);
+                llmAgent.mergeToLLmRequest(llmModel);
             }
-            llm.chatSse(llmRequest, chatMessage.getContent(), completionMessage, it -> {
-                if (it.isFinish()) {
-                    String msg = it.getOutput().toString();
-                    // finish 时，无论之前发送了多少，都要确保最后的增量被发送
-                    if (msg.length() > MESSAGE_TS && !it.isError()) {
-                        // 只发送最后的增量部分
-                        if (!StringUtils.isEmpty(it.getCurrMessage())) {
-                            this.sendMessage(emitter, it.getCurrMessage(), llmModal, chatMessage, completionMessage);
-                        }
-                    } else {
-                        // 短消息直接发送完整内容
-                        msg = this.sendMessage(emitter, msg, llmModal, chatMessage, completionMessage);
-                    }
-
-                    // 保存到数据库时使用完整消息
-                    chatMessage.setTokens((long) it.getUsage().getPrompt_tokens());
+            llmRequest.setAutoCallTool(autoToolCall);
+            llm.chatSse(llmRequest,userMessage, chatContext, it -> {
+                if (null != it.getThrowable()) {
+                    String message = it.getThrowable().getMessage();
+                    this.sendSseMessage(emitter, message);
+                    eruptDao.persistAndFlush(AiChatMessage.create(chatMessage.getChatId(), llmModel.getLlm(), llmModel.getModel(), ChatSenderType.MODEL, message, 0));
+                    this.completeSse(emitter);
+                } else if (it.isFinish()) {
+                    String message = it.getAiMessage() != null && it.getAiMessage().text() != null ? it.getAiMessage().text() : "";
+                    this.sendSseDone(emitter);
+                    chatMessage.setTokens(it.getUsage().inputTokenCount());
                     eruptDao.mergeAndFlush(chatMessage);
-                    eruptDao.persistAndFlush(ChatMessage.create(chatMessage.getChatId(), llmModal.getLlm(), llmModal.getModel(), ChatSenderType.MODEL, msg, (long) it.getUsage().getCompletion_tokens()));
-                    emitter.complete();
-                } else {
-                    if (it.getOutput().toString().length() > MESSAGE_TS) {
-                        if (it.isPending()) {
-                            this.sendMessage(emitter, it.getOutput().toString(), llmModal, chatMessage, completionMessage);
-                            it.setPending(false);
-                        } else {
-                            this.sendMessage(emitter, it.getCurrMessage(), llmModal, chatMessage, completionMessage);
-                        }
-                    } else {
-                        it.setPending(true);
-                    }
+                    eruptDao.persistAndFlush(AiChatMessage.create(chatMessage.getChatId(), llmModel.getLlm(),
+                            llmModel.getModel(), ChatSenderType.MODEL, message, it.getUsage().outputTokenCount()));
+                    this.completeSse(emitter);
+                } else if (null != it.getCurrMessage()) {
+                    this.sendSseMessage(emitter, it.getCurrMessage());
+                }
+                if (null != it.getThink()) {
+                    this.sendSseThinkMessage(emitter, it.getThink());
                 }
             });
         } catch (Exception e) {
-            eruptDao.persistAndFlush(ChatMessage.create(chatMessage.getChatId(), llmModal.getLlm(), llmModal.getModel(), ChatSenderType.MODEL, e.getMessage(), 0L));
-            emitter.send(GsonFactory.getGson().toJson(new SseBody(e.getMessage())), MediaType.TEXT_EVENT_STREAM);
-            emitter.complete();
+            log.error("LLM error: {}", e.getMessage(), e);
+            this.stopSse(emitter, chatMessage, llmModel, e.toString());
         }
     }
 
-    private String sendMessage(SseEmitter emitter, String userMessage, LLM llm, ChatMessage chatMessage, List<ChatCompletionMessage> userContext) {
-        if (aiProp.isEnableFunctionCall() && aiFunctionManager.exist(userMessage.trim())) {
-            String functionMessage = aiFunctionManager.call(userMessage, llm, chatMessage.getContent(), userContext);
-            try {
-                emitter.send(GsonFactory.getGson().toJson(new SseBody(functionMessage)), MediaType.TEXT_EVENT_STREAM);
-            } catch (Exception ignore) {
+
+    @SneakyThrows
+    public void sendSseDone(SseEmitter emitter) {
+        this.sendSseBody(emitter, new SseBody(SseEvent.DONE, null));
+    }
+
+    @SneakyThrows
+    public void sendSseThinkClear(SseEmitter emitter) {
+        this.sendSseBody(emitter, new SseBody(SseEvent.THINK, null));
+    }
+
+    @SneakyThrows
+    public void sendSseThinkMessage(SseEmitter emitter, String llmMessage) {
+        this.sendSseBody(emitter, new SseBody(SseEvent.THINK, llmMessage));
+    }
+
+    @SneakyThrows
+    private void stopSse(SseEmitter emitter, AiChatMessage chatMessage, LLM llmModel, String reason) {
+        eruptDao.persistAndFlush(AiChatMessage.create(chatMessage.getChatId(), llmModel.getLlm(), llmModel.getModel(), ChatSenderType.MODEL, reason, 0));
+        this.sendSseBody(emitter, new SseBody(SseEvent.TOKEN, reason));
+        this.completeSse(emitter);
+    }
+
+    @SneakyThrows
+    public void sendSseMessage(SseEmitter emitter, String llmMessage) {
+        if (StringUtils.isNotBlank(llmMessage) && llmMessage.length() > aiProp.getMessageChunkSize()) {
+            this.sendSseThinkClear(emitter);
+            for (int i = 0; i < llmMessage.length(); i += aiProp.getMessageChunkSize()) {
+                int end = Math.min(i + aiProp.getMessageChunkSize(), llmMessage.length());
+                this.sendSseBody(emitter, new SseBody(SseEvent.TOKEN, llmMessage.substring(i, end)));
+                if (aiProp.getMessageDelay() > 0) {
+                    Thread.sleep(aiProp.getMessageDelay());
+                }
             }
-            return functionMessage;
         } else {
-            try {
-                emitter.send(GsonFactory.getGson().toJson(new SseBody(userMessage)), MediaType.TEXT_EVENT_STREAM);
-            } catch (Exception ignore) {
-            }
+            this.sendSseBody(emitter, new SseBody(SseEvent.TOKEN, llmMessage));
+            this.sendSseThinkClear(emitter);
         }
-        return userMessage;
+    }
+
+    public void sendSseBody(SseEmitter emitter, SseBody sseBody) {
+        try {
+            emitter.send(GsonFactory.getGson().toJson(sseBody), MediaType.TEXT_EVENT_STREAM);
+        } catch (Exception e) {
+            log.warn("SSE send error: {}", e.getMessage());
+        }
+    }
+
+    public void completeSse(SseEmitter emitter) {
+        try {
+            emitter.complete();
+            log.info("SSE complete");
+        } catch (Exception e) {
+            log.warn("SSE complete error: {}", e.getMessage());
+        }
     }
 
 }
